--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-    <title>Carlos Rojas - Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+    <link rel="stylesheet" href="./style.css">
+    <title>Portfolio - Carlos Rojas</title>
     <style>
         body {
             background-color: #000;
@@ -30,9 +31,6 @@
         }
         p, li {
             text-align: justify;
-        }
-        .center-text {
-            text-align: center;
         }
         .no-bullets {
             list-style: none;
@@ -66,7 +64,7 @@
 
 <header>
     <h1>Carlos Rojas</h1>
-    <p class="center-text">Statistician & Junior Software Developer | Medellín, Colombia</p>
+    <p class="center-text">Statistician & Junior Software Developer</p>
 </header>
 
 <section>
@@ -140,6 +138,10 @@
 <section>
     <h2>Projects</h2>
     <p>I'm currently working on personal and collaborative projects. They will be shared here soon!</p>
+</section>
+
+<section>
+    <h2>Contact</h2>
 </section>
 
 <footer>
