--- a/p.html
+++ b/p.html
@@ -11,7 +11,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div>
             <nav class="main-nav">
                 <ul class="nav-list">
                     <li><a href="#about">About Me</a></li>
@@ -29,13 +29,13 @@
     </header>
 
     <main>
-        <section id="about">
+        <section id="about" class="dark-section">
             <div class="container">
                 <h2>About Me</h2>
                 <p style="text-align: justify">
-                  Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
-                  I’m currently a Coder at Riwi, training to become a full-stack software developer.
-                  I enjoy working on real-life challenges using data analysis and programming tools.
+                    Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
+                    I’m currently a Coder at Riwi, training to become a full-stack software developer.
+                    I enjoy working on real-life challenges using data analysis and programming tools.
                 </p>
             </div>
         </section>
