--- a/a.html
+++ b/a.html
@@ -13,32 +13,49 @@
 <body>
     <!-- Header -->
     <header>
-        <!-- Container Title 1 -->
+        <!-- Navigation -->
+        <nav class="navbar">
+            <!-- Unordered List -->
+            <ul>
+                <!-- List -->
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#work-experience-education">Work Experience & Education</a></li>
+                <li><a href="#my-projects">My Projects</a></li>
+                <li><a href="#technical-skills">Technical Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+        <!-- Title 1 Container -->
         <div class="container">
             <!-- Tile 1 -->
             <h1>Carlos Arturo Rojas Bolaños</h1>
-            <p>Statistician & Riwi Developer</p>
+            <p class="subtitle">Statistician & Riwi Developer</p>
         </div>
     </header>
     <!-- Main -->
     <main>
         <!-- About Me Section -->
         <section id="about-me">
-            <!-- Container About Me -->
+            <!-- About Me Container -->
             <div class="container">
                 <!-- Title 2.1 -->
                 <h2>About Me</h2>
-                <p>
+                <p class="text-justify">
                     Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
                     I’m currently a Coder at Riwi, training to become a full-stack software developer.
                     I enjoy working on real-life challenges using data analysis and programming tools.
                 </p>
+                <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
+                <a href="linkedin.com/in/carlos-rojas/" target="_blank">LinkedIn</a>
+            </div>
+            <div>
+                <img src="./images/profile_photo.jpg" alt="Profile photo" width="250">
             </div>
         </section>
         <!-- Work Experience / Education Section -->
         <section id="work-experience-education">
-            <!-- Container Work Experience -->
-            <div class="black-container">
+            <!-- Work Experience Container -->
+            <div class="container-work-education">
                 <!-- Title 2.2 -->
                 <h2>Work Experience</h2>
                 <!-- Unordered List -->
@@ -46,10 +63,12 @@
                     <!-- List -->
                     <li>
                         <!-- Title 3.1 -->
-                        <h3>Data Intern — Fábrica de Licores de Antioquia</h3>
+                        <h3>Data Intern</h3>
+                        <!-- Title 4.1 -->
+                        <h4>Fábrica de Licores de Antioquia</h4>
                         <em>February 2023 — July 2023</em>
                         <!-- Unordered List -->
-                        <ul>
+                        <ul class="top-space">
                             <!-- List -->
                             <li>Managed and consolidated sales and inventory data for various products in Antioquia.</li>
                             <li>Performed weekly and monthly sales analysis comparing current and past periods.</li>
@@ -59,45 +78,52 @@
                     </li>
                 </ul>
             </div>
-            <!-- Container Education -->
-            <div class="container">
+            <!-- Education Container -->
+            <div class="work-education-container">
                 <!-- Title 2.3 -->
                 <h2>Education</h2>
                 <!-- Unordered List -->
                 <ul>
                     <!-- List -->
-                    <li><h3>Specialization in Analytics – Universidad Nacional de Colombia (2025)</h3></li>
-                    <li><h3>Statistician – Universidad Nacional de Colombia (2023)</h3></li>
+                    <li>
+                        <!-- Title 3.2 -->
+                        <h3>Analytics Specialist</h3>
+                        <!-- Title 4.2 -->
+                        <h4>Universidad Nacional de Colombia</h4>
+                        <em>Medellín, Colombia, 2025</em>
+                    </li>
+                    <li>
+                        <!-- Title 3.3 -->
+                        <h3>Statistician</h3>
+                        <!-- Title 4.3 -->
+                        <h4>Universidad Nacional de Colombia</h4>
+                        <em>Medellín, Colombia, 2023</em>
+                    </li>
                 </ul>
             </div>
         </section>
         <!-- My Projects Section -->
         <section id="my-projects">
-            <!-- Container My Projects -->
-            <div class="black-container">
-                <!-- Title 2.4 -->
-                <h2>My Projects</h2>
-                <!-- Unordered List -->
-                <ul>
-                    <!-- List -->
-                    <li>
-                      <!-- Title 3.2 -->
-                      <h3>Project 1: Inventory Management System</h3>
-                      <img src="./images/project1.jpg" alt="Project 1" width="300">
-                      <p>This is my first project where I built an inventory management system.</p>
-                    </li>
-                    <li>
-                        <!-- Title 3.2 -->
-                        <h3>Project 2: Portfolio Website</h3>
-                        <img src="./images/project2.jpg" alt="Project 2" width="300">
-                        <p>This is a project where I built a personal portfolio using HTML & CSS.</p>
-                    </li>
-                </ul>
+            <!-- Title 2.4 -->
+            <h2>My Projects</h2>
+            <!-- Project 1 Container -->
+            <div class="project-container">
+                <!-- Title 3.2 -->
+                <h3>Project 1: Flight Booking System</h3>
+                <img src="./images/project_1.jpg" alt="Project 1" width="300">
+                <p class="text-justify">This is my first project where I built a Flight Booking System.</p>
+            </div>
+            <!-- Project 2 Container -->
+            <div class="project-container">
+                <!-- Title 3.2 -->
+                <h3>Project 2: Portfolio Website</h3>
+                <img src="./images/project_2.jpg" alt="Project 2" width="300">
+                <p class="text-justify">This is a project where I built a personal portfolio using HTML & CSS.</p>
             </div>
         </section>
         <!-- Technical Skills Section -->
         <section id="technical-skills">
-            <!-- Container Technical Skills -->
+            <!-- Technical Skills Container -->
             <div class="container">
                 <!-- Title 2.5 -->
                 <h2>Technical Skills</h2>
@@ -111,23 +137,43 @@
                     <li>CSS</li>
                     <li>Git</li>
                     <li>GitHub</li>
+                    <li>Power BI</li>
                 </ul>
             </div>
         </section>
         <!-- Contact Section -->
         <section id="contact">
-            <!-- Container Contact -->
-            <div class="black-container">
+            <!-- Contact Information Container -->
+            <div class="container">
                 <!-- Title 2.6 -->
                 <h2>Contact</h2>
-                <p>Email: carlos@example.com</p>
-                <p>LinkedIn: linkedin.com/in/carlos</p>
+                <p class="text-justify">Email: caarojasbo@unal.edu.co</p>
+                <p class="text-justify">Teléfono: +57 312 405 2318</p>
+            </div>
+            <!-- Form Container -->
+            <div class="container">
+                <form>
+                    <label>
+                        <input type="text" placeholder="Name" required>
+                    </label>
+                    <label>
+                        <input type="email" placeholder="Email" required>
+                    </label>
+                    <label>
+                        <input type="text" placeholder="Subject" required>
+                    </label>
+                    <label>
+                        <textarea rows="4" placeholder="Message" required></textarea>
+                    </label>
+                    <button type="submit">Send Message</button>
+                </form>
             </div>
         </section>
     </main>
-
-
+    <!-- Footer -->
+    <footer class="footer">
+        &copy; 2025 Carlos Rojas. All rights reserved.
+    </footer>
 </body>
-
 
 </html>
