--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 
 <!-- Head -->
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Carlos Rojas - Portfolio</title>
-  <link rel="stylesheet" href="styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Carlos Rojas - Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <!-- Body -->
@@ -15,9 +16,7 @@
     <header>
         <!-- Navigation -->
         <nav class="navbar">
-            <!-- Unordered List -->
             <ul>
-                <!-- List -->
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work-experience-education">Work Experience & Education</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
@@ -25,150 +24,140 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <!-- Title 1 Container -->
+        <!-- Title Container -->
         <div class="title-container">
-            <!-- Tile 1 -->
-            <h1>Carlos Arturo Rojas Bolaños</h1>
+            <h1 class="title">Carlos Arturo Rojas Bolaños</h1>
             <p class="subtitle">Statistician & Riwi Developer</p>
         </div>
     </header>
     <!-- Main -->
     <main>
-        <!-- About Me Section -->
-        <section id="about-me">
-            <!-- About Me Container -->
-            <div class="container">
-                <!-- Title 2.1 -->
-                <h2>About Me</h2>
-                <p class="text-justify">
-                    Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
-                    I’m currently a Coder at Riwi, training to become a full-stack software developer.
-                    I enjoy working on real-life challenges using data analysis and programming tools.
-                </p>
-                <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
-                <a href="linkedin.com/in/carlos-rojas/" target="_blank">LinkedIn</a>
-            </div>
-            <div>
-                <img src="./images/profile_photo.jpg" alt="Profile photo" width="250">
-            </div>
-        </section>
-        <!-- Work Experience / Education Section -->
-        <section id="work-experience-education">
-            <!-- Work Experience Container -->
-            <div class="work-education-container">
-                <!-- Title 2.2 -->
-                <h2>Work Experience</h2>
-                <!-- Unordered List -->
-                <ul>
-                    <!-- List -->
-                    <li>
-                        <!-- Title 3.1 -->
-                        <h3>Data Intern</h3>
-                        <!-- Title 4.1 -->
-                        <h4>Fábrica de Licores de Antioquia</h4>
-                        <em>February 2023 — July 2023</em>
-                        <!-- Unordered List -->
-                        <ul class="top-space">
-                            <!-- List -->
-                            <li>Managed and consolidated sales and inventory data for various products in Antioquia.</li>
-                            <li>Performed weekly and monthly sales analysis comparing current and past periods.</li>
-                            <li>Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</li>
-                            <li>Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</li>
-                        </ul>
-                    </li>
-                </ul>
-            </div>
-            <!-- Education Container -->
-            <div class="work-education-container">
-                <!-- Title 2.3 -->
-                <h2>Education</h2>
-                <!-- Unordered List -->
-                <ul>
-                    <!-- List -->
-                    <li>
-                        <!-- Title 3.2 -->
-                        <h3>Analytics Specialist</h3>
-                        <!-- Title 4.2 -->
-                        <h4>Universidad Nacional de Colombia</h4>
-                        <em>Medellín, Colombia, 2025</em>
-                    </li>
-                    <li>
-                        <!-- Title 3.3 -->
-                        <h3>Statistician</h3>
-                        <!-- Title 4.3 -->
-                        <h4>Universidad Nacional de Colombia</h4>
-                        <em>Medellín, Colombia, 2023</em>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- My Projects Section -->
-        <section id="my-projects">
-            <!-- Title 2.4 -->
+        <div class="black-container">
+            <!-- About Me Section -->
+            <section id="about-me" class="section-container">
+                <!-- About Me Container -->
+                <div class="sub-section-container">
+                    <h2>About Me</h2>
+                    <p class="text-justify">
+                        Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
+                        I’m currently a Coder at Riwi, training to become a full-stack software developer.
+                        I enjoy working on real-life challenges using data analysis and programming tools.
+                    </p>
+                    <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
+                    <a href="linkedin.com/in/carlos-rojas/" target="_blank">LinkedIn</a>
+                </div>
+                <!-- Profile Photo Container -->
+                <div class="sub-section-container">
+                    <img src="./images/profile_photo.jpg" alt="Profile photo" width="250">
+                </div>
+            </section>
+        </div>
+        <div class="container">
+            <!-- Work Experience / Education Section -->
+            <section id="work-experience-education" class="section-container">
+                <!-- Work Experience Container -->
+                <div class="sub-section-container">
+                    <h2>Work Experience</h2>
+                    <ul>
+                        <li>
+                            <h3>Data Intern</h3>
+                            <h4>Fábrica de Licores de Antioquia</h4>
+                            <em>February 2023 — July 2023</em>
+                            <ul class="top-space">
+                                <li>Managed and consolidated sales and inventory data for various products in Antioquia.</li>
+                                <li>Performed weekly and monthly sales analysis comparing current and past periods.</li>
+                                <li>Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</li>
+                                <li>Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <!-- Education Container -->
+                <div class="sub-section-container">
+                    <h2>Education</h2>
+                    <ul>
+                        <li>
+                            <h3>Analytics Specialist</h3>
+                            <h4>Universidad Nacional de Colombia</h4>
+                            <em>Medellín, Colombia, 2025</em>
+                        </li>
+                        <li>
+                            <h3>Statistician</h3>
+                            <h4>Universidad Nacional de Colombia</h4>
+                            <em>Medellín, Colombia, 2023</em>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <div class="black-container">
             <h2>My Projects</h2>
-            <!-- Project 1 Container -->
-            <div class="project-container">
-                <!-- Title 3.2 -->
-                <h3>Project 1: Flight Booking System</h3>
-                <img src="./images/project_1.jpg" alt="Project 1" width="300">
-                <p class="text-justify">This is my first project where I built a Flight Booking System.</p>
-            </div>
-            <!-- Project 2 Container -->
-            <div class="project-container">
-                <!-- Title 3.2 -->
-                <h3>Project 2: Portfolio Website</h3>
-                <img src="./images/project_2.jpg" alt="Project 2" width="300">
-                <p class="text-justify">This is a project where I built a personal portfolio using HTML & CSS.</p>
-            </div>
-        </section>
-        <!-- Technical Skills Section -->
-        <section id="technical-skills">
-            <!-- Technical Skills Container -->
-            <div class="container">
-                <!-- Title 2.5 -->
+            <!-- My Projects Section -->
+            <section id="my-projects" class="projects-container">
+                <!-- Project 1 Container -->
+                <div class="sub-project-container">
+                    <h3 class="projects-titles">Project 1: Flight Booking System</h3>
+                    <img src="./images/project_1.jpg" alt="Project 1" width="300">
+                    <p class="text-justify">This is my first project where I built a Flight Booking System.</p>
+                </div>
+                <!-- Project 2 Container -->
+                <div class="sub-project-container">
+                    <h3 class="projects-titles">Project 2: Portfolio Website</h3>
+                    <img src="./images/project_2.jpg" alt="Project 2" width="500">
+                    <p class="text-justify">This is a project where I built a personal portfolio using HTML & CSS.</p>
+                </div>
+            </section>
+        </div>
+        <div class="container">
+            <section id="technical-skills" class="section-skills">
                 <h2>Technical Skills</h2>
-                <!-- Unordered List -->
-                <ul>
-                    <!-- List -->
-                    <li>Python</li>
-                    <li>R</li>
-                    <li>SQL</li>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>Git</li>
-                    <li>GitHub</li>
-                    <li>Power BI</li>
-                </ul>
-            </div>
-        </section>
-        <!-- Contact Section -->
-        <section id="contact">
-            <!-- Contact Information Container -->
-            <div class="container">
-                <!-- Title 2.6 -->
-                <h2>Contact</h2>
-                <p class="text-justify">Email: caarojasbo@unal.edu.co</p>
-                <p class="text-justify">Teléfono: +57 312 405 2318</p>
-            </div>
-            <!-- Form Container -->
-            <div class="container">
-                <form>
-                    <label>
-                        <input type="text" placeholder="Name" required>
-                    </label>
-                    <label>
-                        <input type="email" placeholder="Email" required>
-                    </label>
-                    <label>
-                        <input type="text" placeholder="Subject" required>
-                    </label>
-                    <label>
-                        <textarea rows="4" placeholder="Message" required></textarea>
-                    </label>
-                    <button type="submit">Send Message</button>
-                </form>
-            </div>
-        </section>
+                <div class="skills-container">
+                    <ul>
+                        <li>Python</li>
+                        <li>R</li>
+                    </ul>
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                    </ul>
+                    <ul>
+                        <li>SQL</li>
+                        <li>Power BI</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+        <div class="black-container">
+            <h2>Contact</h2>
+            <!-- Contact Section -->
+            <section id="contact" class="section-container">
+                <!-- Contact Information Container -->
+                <div class="sub-section-container">
+                    <p class="text-justify">Email: caarojasbo@unal.edu.co</p>
+                    <p class="text-justify">Teléfono: +57 312 405 2318</p>
+                </div>
+                <!-- Form Container -->
+                <div class="sub-section-container">
+                    <form>
+                        <label>
+                            <input type="text" placeholder="Name" required>
+                        </label>
+                        <label>
+                            <input type="email" placeholder="Email" required>
+                        </label>
+                        <label>
+                            <input type="text" placeholder="Subject" required>
+                        </label>
+                        <label>
+                            <textarea rows="4" placeholder="Message" required></textarea>
+                        </label>
+                        <button type="submit">Send Message</button>
+                    </form>
+                </div>
+            </section>
+        </div>
     </main>
     <!-- Footer -->
     <footer class="footer">
