--- a/index.html
+++ b/index.html
@@ -34,97 +34,106 @@
     <main>
         <div class="black-container">
             <!-- About Me Section -->
-            <section id="about-me" class="section-container">
+            <section id="about-me" class="section-about-me">
                 <!-- About Me Container -->
-                <div class="sub-section-container">
-                    <h2>About Me</h2>
-                    <p class="text-justify">
-                        Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
-                        I’m currently a Coder at Riwi, training to become a full-stack software developer.
-                        I enjoy working on real-life challenges using data analysis and programming tools.
-                    </p>
-                    <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
-                    <a href="linkedin.com/in/carlos-rojas/" target="_blank">LinkedIn</a>
-                </div>
-                <!-- Profile Photo Container -->
-                <div class="sub-section-container">
-                    <img src="./images/profile_photo.jpg" alt="Profile photo" width="250">
+                <div class="about-me-container">
+                    <!-- Information Container -->
+                    <div class="information-container">
+                        <h2>About Me</h2>
+                        <p class="text-justify">
+                            Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
+                            I’m currently a Coder at Riwi, training to become a full-stack software developer.
+                            I enjoy working on real-life challenges using data analysis and programming tools.
+                        </p>
+                        <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
+                        <a href="linkedin.com/in/carlos-rojas/" target="_blank">LinkedIn</a>
+                    </div>
+                    <!-- Profile Photo Container -->
+                    <div class="profile-photo-container">
+                        <img src="./images/profile_photo.jpg" alt="Profile photo" width="300">
+                    </div>
                 </div>
             </section>
         </div>
         <div class="container">
             <!-- Work Experience / Education Section -->
-            <section id="work-experience-education" class="section-container">
-                <!-- Work Experience Container -->
-                <div class="sub-section-container">
-                    <h2>Work Experience</h2>
-                    <ul>
-                        <li>
-                            <h3>Data Intern</h3>
-                            <h4>Fábrica de Licores de Antioquia</h4>
-                            <em>February 2023 — July 2023</em>
-                            <ul class="top-space">
-                                <li>Managed and consolidated sales and inventory data for various products in Antioquia.</li>
-                                <li>Performed weekly and monthly sales analysis comparing current and past periods.</li>
-                                <li>Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</li>
-                                <li>Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
-                <!-- Education Container -->
-                <div class="sub-section-container">
-                    <h2>Education</h2>
-                    <ul>
-                        <li>
-                            <h3>Analytics Specialist</h3>
-                            <h4>Universidad Nacional de Colombia</h4>
-                            <em>Medellín, Colombia, 2025</em>
-                        </li>
-                        <li>
-                            <h3>Statistician</h3>
-                            <h4>Universidad Nacional de Colombia</h4>
-                            <em>Medellín, Colombia, 2023</em>
-                        </li>
-                    </ul>
+            <section id="work-experience-education" class="section-work-education">
+                <!-- Work Experience / Education Container -->
+                <div class="work-education-container">
+                    <!-- Work Experience Container -->
+                    <div class="work-experience-container">
+                        <h2>Work Experience</h2>
+                        <ul>
+                            <li>
+                                <h3>Data Intern</h3>
+                                <h4>Fábrica de Licores de Antioquia</h4>
+                                <em>February 2023 — July 2023</em>
+                                <ul class="top-space">
+                                    <li>Managed and consolidated sales and inventory data for various products in Antioquia.</li>
+                                    <li>Performed weekly and monthly sales analysis comparing current and past periods.</li>
+                                    <li>Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</li>
+                                    <li>Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- Education Container -->
+                    <div class="education-container">
+                        <h2>Education</h2>
+                        <ul>
+                            <li>
+                                <h3>Analytics Specialist</h3>
+                                <h4>Universidad Nacional de Colombia</h4>
+                                <em>Medellín, Colombia, 2025</em>
+                            </li>
+                            <li>
+                                <h3>Statistician</h3>
+                                <h4>Universidad Nacional de Colombia</h4>
+                                <em>Medellín, Colombia, 2023</em>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
         </div>
         <div class="black-container">
-            <h2>My Projects</h2>
             <!-- My Projects Section -->
-            <section id="my-projects" class="projects-container">
-                <!-- Project 1 Container -->
-                <div class="sub-project-container">
-                    <h3 class="projects-titles">Project 1: Flight Booking System</h3>
-                    <img src="./images/project_1.jpg" alt="Project 1" width="300">
-                    <p class="text-justify">This is my first project where I built a Flight Booking System.</p>
-                </div>
-                <!-- Project 2 Container -->
-                <div class="sub-project-container">
-                    <h3 class="projects-titles">Project 2: Portfolio Website</h3>
-                    <img src="./images/project_2.jpg" alt="Project 2" width="500">
-                    <p class="text-justify">This is a project where I built a personal portfolio using HTML & CSS.</p>
+            <section id="my-projects" class="section-projects">
+                <h2>My Projects</h2>
+                <!-- My Projects Container -->
+                <div class="projects-container">
+                    <!-- Project 1 Container -->
+                    <div class="sub-project-container">
+                        <h3 class="projects-titles">Project 1: Flight Booking System</h3>
+                        <img src="./images/project_1.jpg" alt="Project 1" width="300">
+                        <p class="text-justify">This is my first project where I built a Flight Booking System.</p>
+                    </div>
+                    <!-- Project 2 Container -->
+                    <div class="sub-project-container">
+                        <h3 class="projects-titles">Project 2: Portfolio Website</h3>
+                        <img src="./images/project_2.jpg" alt="Project 2" width="500">
+                        <p class="text-justify">This is a project where I built a personal portfolio using HTML & CSS.</p>
+                    </div>
                 </div>
             </section>
         </div>
         <div class="container">
+            <!-- Technical Skills Section -->
             <section id="technical-skills" class="section-skills">
                 <h2>Technical Skills</h2>
+                <!-- Technical skills Container -->
                 <div class="skills-container">
                     <ul>
-                        <li>Python</li>
-                        <li>R</li>
+                        <li><i class="fab fa-python"></i>Python</li>
+                        <li><i class="fab fa-r-project"></i>R</li>
+                        <li><i class="fab fa-html5"></i>HTML</li>
+                        <li><i class="fab fa-css3-alt"></i>CSS</li>
                     </ul>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                    </ul>
-                    <ul>
-                        <li>SQL</li>
-                        <li>Power BI</li>
-                        <li>Git</li>
-                        <li>GitHub</li>
+                        <li><i class="fas fa-database"></i>SQL</li>
+                        <li><i class="fas fa-chart-bar"></i>Power BI</li>
+                        <li><i class="fab fa-git-alt"></i>Git</li>
+                        <li><i class="fab fa-github"></i>GitHub</li>
                     </ul>
                 </div>
             </section>
