update header, sections about me, work-education & projects

--- a/index.html
+++ b/index.html
@@ -34,19 +34,24 @@
     <main>
         <div class="black-container">
             <!-- About Me Section -->
-            <section id="about-me" class="section-about-me">
+            <section id="about-me" class="about-me-section">
                 <!-- About Me Container -->
                 <div class="about-me-container">
                     <!-- Information Container -->
                     <div class="information-container">
                         <h2>About Me</h2>
                         <p class="text-justify">
-                            Hi! I'm Carlos, a statistician who is passionate about data, development, and problem-solving.
-                            I’m currently a Coder at Riwi, training to become a full-stack software developer.
-                            I enjoy working on real-life challenges using data analysis and programming tools.
+                            I'm Carlos, a Statistics professional with a recent specialization in Analytics,
+                            where I developed a strong passion for data analysis and programming as powerful
+                            tools for solving problems creatively and efficiently.
+                            <br><br>
+                            I'm currently training to become a software developer at Riwi, gaining hands-on
+                            experience in Python, HTML, and CSS. My goal is to combine my background in data
+                            analysis with software development to contribute to meaningful and innovative technology
+                            projects.
+                            <br><br>
+                            I'm open to new challenges that will support my professional and personal growth.
                         </p>
-                        <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
-                        <a href="linkedin.com/in/carlos-rojas/" target="_blank">LinkedIn</a>
                     </div>
                     <!-- Profile Photo Container -->
                     <div class="profile-photo-container">
@@ -57,7 +62,7 @@
         </div>
         <div class="container">
             <!-- Work Experience / Education Section -->
-            <section id="work-experience-education" class="section-work-education">
+            <section id="work-experience-education" class="work-education-section">
                 <!-- Work Experience / Education Container -->
                 <div class="work-education-container">
                     <!-- Work Experience Container -->
@@ -69,10 +74,10 @@
                                 <h4>Fábrica de Licores de Antioquia</h4>
                                 <em>February 2023 — July 2023</em>
                                 <ul class="top-space">
-                                    <li>Managed and consolidated sales and inventory data for various products in Antioquia.</li>
-                                    <li>Performed weekly and monthly sales analysis comparing current and past periods.</li>
-                                    <li>Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</li>
-                                    <li>Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</li>
+                                    <li><p class="work-justify">Managed and consolidated sales and inventory data for various products in Antioquia.</p></li>
+                                    <li><p class="work-justify">Performed weekly and monthly sales analysis comparing current and past periods.</p></li>
+                                    <li><p class="work-justify">Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</p></li>
+                                    <li><p class="work-justify">Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</p></li>
                                 </ul>
                             </li>
                         </ul>
@@ -98,28 +103,38 @@
         </div>
         <div class="black-container">
             <!-- My Projects Section -->
-            <section id="my-projects" class="section-projects">
+            <section id="my-projects" class="projects-section">
                 <h2>My Projects</h2>
                 <!-- My Projects Container -->
                 <div class="projects-container">
                     <!-- Project 1 Container -->
                     <div class="sub-project-container">
-                        <h3 class="projects-titles">Project 1: Flight Booking System</h3>
-                        <img src="./images/project_1.jpg" alt="Project 1" width="300">
-                        <p class="text-justify">This is my first project where I built a Flight Booking System.</p>
+                        <h3 class="projects-titles">Project 1: Inventory Management Program</h3>
+                        <img src="./images/project_1.jpg" alt="Project 1" width="500">
+                        <p class="text-justify">
+                            This Python program helps manage a store's inventory efficiently.
+                            <br>
+                            It provides functionalities to add, search, update, delete products,
+                            <br>
+                            and calculate the total value of the inventory.
+                        </p>
                     </div>
                     <!-- Project 2 Container -->
                     <div class="sub-project-container">
                         <h3 class="projects-titles">Project 2: Portfolio Website</h3>
                         <img src="./images/project_2.jpg" alt="Project 2" width="500">
-                        <p class="text-justify">This is a project where I built a personal portfolio using HTML & CSS.</p>
+                        <p class="text-justify">
+                            A personal portfolio project built with HTML and CSS to showcase my
+                            <br>
+                            background, skills, and projects as an aspiring software developer.
+                        </p>
                     </div>
                 </div>
             </section>
         </div>
         <div class="container">
             <!-- Technical Skills Section -->
-            <section id="technical-skills" class="section-skills">
+            <section id="technical-skills" class="skills-section">
                 <h2>Technical Skills</h2>
                 <!-- Technical skills Container -->
                 <div class="skills-container">
@@ -139,31 +154,36 @@
             </section>
         </div>
         <div class="black-container">
-            <h2>Contact</h2>
             <!-- Contact Section -->
-            <section id="contact" class="section-container">
-                <!-- Contact Information Container -->
-                <div class="sub-section-container">
-                    <p class="text-justify">Email: caarojasbo@unal.edu.co</p>
-                    <p class="text-justify">Teléfono: +57 312 405 2318</p>
-                </div>
-                <!-- Form Container -->
-                <div class="sub-section-container">
-                    <form>
-                        <label>
-                            <input type="text" placeholder="Name" required>
-                        </label>
-                        <label>
-                            <input type="email" placeholder="Email" required>
-                        </label>
-                        <label>
-                            <input type="text" placeholder="Subject" required>
-                        </label>
-                        <label>
-                            <textarea rows="4" placeholder="Message" required></textarea>
-                        </label>
-                        <button type="submit">Send Message</button>
-                    </form>
+            <section id="contact" class="contact-section">
+                <h2>Contact</h2>
+                <!-- Contact Container -->
+                <div class="contact-container">
+                    <!-- Contact Information Container -->
+                    <div class="contact-information-container">
+                        <p class="text-justify">Email: caarojasbo@unal.edu.co</p>
+                        <p class="text-justify">Teléfono: +57 312 405 2318</p>
+                        <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
+                        <a href="https://co.linkedin.com/" target="_blank">LinkedIn</a>
+                    </div>
+                    <!-- Form Container -->
+                    <div class="form-container">
+                        <form>
+                            <label>
+                                <input type="text" placeholder="Name" required>
+                            </label>
+                            <label>
+                                <input type="email" placeholder="Email" required>
+                            </label>
+                            <label>
+                                <input type="text" placeholder="Subject" required>
+                            </label>
+                            <label>
+                                <textarea rows="4" placeholder="Message" required></textarea>
+                            </label>
+                            <button type="submit">Send Message</button>
+                        </form>
+                    </div>
                 </div>
             </section>
         </div>
