fix contact section

--- a/index.html
+++ b/index.html
@@ -161,10 +161,28 @@
                 <div class="contact-container">
                     <!-- Contact Information Container -->
                     <div class="contact-information-container">
-                        <p class="text-justify">Email: caarojasbo@unal.edu.co</p>
-                        <p class="text-justify">Teléfono: +57 312 405 2318</p>
-                        <a href="https://github.com/Carturo8" target="_blank">GitHub</a>
-                        <a href="https://co.linkedin.com/" target="_blank">LinkedIn</a>
+                        <p class="text-justify">
+                            <i class="fas fa-envelope"></i>
+                            Email: caarojasbo@unal.edu.co
+                        </p>
+                        <p class="text-justify">
+                            <i class="fas fa-phone"></i>
+                            Phone: +57 312 405 2318
+                        </p>
+                        <div class="social-links">
+                            <a href="https://github.com/Carturo8" target="_blank">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                            <a href="https://co.linkedin.com/" target="_blank">
+                                <i class="fab fa-linkedin"></i> LinkedIn
+                            </a>
+                            <a href="https://www.instagram.com/" target="_blank">
+                                <i class="fab fa-instagram"></i> Instagram
+                            </a>
+                            <a href="https://x.com/?lang=es" target="_blank">
+                                <i class="fab fa-x-twitter"></i> X
+                            </a>
+                        </div>
                     </div>
                     <!-- Form Container -->
                     <div class="form-container">
