--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </div>
                     <!-- Profile Photo Container -->
                     <div class="profile-photo-container">
-                        <img src="./images/profile_photo.jpg" alt="Profile photo" width="300">
+                        <img src="./img/profile_photo.jpg" alt="Profile photo" width="300">
                     </div>
                 </div>
             </section>
@@ -110,7 +110,7 @@
                     <!-- Project 1 Container -->
                     <div class="sub-project-container">
                         <h3 class="projects-titles">Project 1: Inventory Management Program</h3>
-                        <img src="./images/project_1.jpg" alt="Project 1" width="500">
+                        <img src="./img/project_1.jpg" alt="Project 1" width="500">
                         <p class="text-justify">
                             This Python program helps manage a store's inventory efficiently.
                             <br>
@@ -122,7 +122,7 @@
                     <!-- Project 2 Container -->
                     <div class="sub-project-container">
                         <h3 class="projects-titles">Project 2: Portfolio Website</h3>
-                        <img src="./images/project_2.jpg" alt="Project 2" width="215">
+                        <img src="./img/project_2.jpg" alt="Project 2" width="215">
                         <p class="text-justify">
                             A personal portfolio project built with HTML and CSS to showcase my
                             <br>
