--- a/index.html
+++ b/index.html
@@ -41,21 +41,15 @@
                     <div class="information-container">
                         <h2>About Me</h2>
                         <p class="text-justify">
-                            I'm Carlos, a Statistics professional with a recent specialization in Analytics,
-                            where I developed a strong passion for data analysis and programming as powerful
-                            tools for solving problems creatively and efficiently.
-                            <br><br>
-                            I'm currently training to become a software developer at Riwi, gaining hands-on
-                            experience in Python, HTML, and CSS. My goal is to combine my background in data
-                            analysis with software development to contribute to meaningful and innovative technology
-                            projects.
-                            <br><br>
-                            I'm open to new challenges that will support my professional and personal growth.
+                            I'm Carlos, a Statistics professional specializing in Analytics,
+                            now training as a software developer at Riwi. I aim to blend data analysis
+                            with programming to build innovative tech solutions and keep growing through
+                            new challenges.
                         </p>
                     </div>
                     <!-- Profile Photo Container -->
                     <div class="profile-photo-container">
-                        <img src="./img/profile_photo.jpg" alt="Profile photo" width="300">
+                        <img src="./img/profile_photo.jpg" alt="Profile photo" width="200">
                     </div>
                 </div>
             </section>
@@ -74,10 +68,8 @@
                                 <h4>Fábrica de Licores de Antioquia</h4>
                                 <em>February 2023 — July 2023</em>
                                 <ul class="top-space">
-                                    <li><p class="work-justify">Managed and consolidated sales and inventory data for various products in Antioquia.</p></li>
-                                    <li><p class="work-justify">Performed weekly and monthly sales analysis comparing current and past periods.</p></li>
-                                    <li><p class="work-justify">Calculated weekly inventory estimates for Grupo Éxito stores in Medellín.</p></li>
-                                    <li><p class="work-justify">Developed monthly sales projections for 2023 for Grupo Éxito in Antioquia.</p></li>
+                                    <li><p class="work-justify">Developed monthly sales forecasts in Python for Grupo Éxito in Antioquia.</p></li>
+                                    <li><p class="work-justify">Analyzed inventory and sales data to support weekly and monthly reporting.</p></li>
                                 </ul>
                             </li>
                         </ul>
@@ -161,11 +153,11 @@
                 <div class="contact-container">
                     <!-- Contact Information Container -->
                     <div class="contact-information-container">
-                        <p class="text-justify">
+                        <p class="contact-text">
                             <i class="fas fa-envelope"></i>
                             Email: caarojasbo@unal.edu.co
                         </p>
-                        <p class="text-justify">
+                        <p class="contact-text">
                             <i class="fas fa-phone"></i>
                             Phone: +57 312 405 2318
                         </p>
