--- a/index.html
+++ b/index.html
@@ -124,6 +124,29 @@
                         </figure>
                     </div>
                 </div>
+                <div class="black-container">
+                    <table class="projects-table">
+                        <thead>
+                        <tr>
+                            <th>Project Name</th>
+                            <th>Technology Used</th>
+                            <th>Link</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td>Inventory Management Program</td>
+                            <td>Python</td>
+                            <td><a href="https://github.com/Carturo8/Inventory-Management" target="_blank">View Project</a></td>
+                        </tr>
+                        <tr>
+                            <td>Portfolio Website</td>
+                            <td>HTML, CSS</td>
+                            <td><a href="https://github.com/Carturo8/portfolio" target="_blank">View Project</a></td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
             </section>
         </div>
         <div class="container">
@@ -135,7 +158,7 @@
                     <ul>
                         <li>
                             <i class="fab fa-python"></i>Python
-                            <meter value="0.9" min="0" max="1">90%</meter>
+                            <meter value="0.8" min="0" max="1">80%</meter>
                         </li>
                         <li>
                             <i class="fab fa-r-project"></i>R
