--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-        <!-- Title Container -->
-        <div class="title-container">
-            <h1 class="title">Carlos Arturo Rojas Bolaños</h1>
-            <p class="subtitle">Statistician & Riwi Developer</p>
-        </div>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <h1>Carlos Arturo Rojas Bolaños</h1>
+            <p>Statistician & Riwi Developer</p>
+        </section>
     </header>
     <!-- Main -->
     <main>
