--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <!-- About Me Section -->
         <section id="about-me" class="about-me-section">
-            <!-- Information Container -->
+            <!-- Information -->
             <div class="information">
                 <h2>About Me</h2>
                 <p>
@@ -50,14 +50,14 @@
                     <footer>— Nicholas Negroponte</footer>
                 </blockquote>
             </div>
-            <!-- Profile Photo Container -->
+            <!-- Profile Photo -->
             <div class="profile-photo">
                 <img src="./img/profile_photo.jpg" alt="Profile photo" width="250">
             </div>
         </section>
         <!-- Work Experience / Education Section -->
         <section id="work-experience-education" class="work-education-section">
-            <!-- Work Experience Container -->
+            <!-- Work Experience -->
             <div class="work-experience">
                 <h2>Work Experience</h2>
                 <h3>Data Intern</h3>
@@ -68,7 +68,7 @@
                     <li><p>Analyzed inventory and sales data to support weekly and monthly reporting.</p></li>
                 </ul>
             </div>
-            <!-- Education Container -->
+            <!-- Education -->
             <div class="education">
                 <h2>Education</h2>
                 <ul>
@@ -88,9 +88,9 @@
         <!-- My Projects Section -->
         <section id="my-projects" class="projects-section">
             <h2>My Projects</h2>
-            <!-- My Projects Container -->
+            <!-- My Projects -->
             <div class="projects">
-                <!-- Project 1 Container -->
+                <!-- Project 1 -->
                 <div class="sub-project">
                     <h3>Project 1: Inventory Management Program</h3>
                     <img src="./img/project_1.jpg" alt="Project 1" width="500">
@@ -101,7 +101,7 @@
                         update, delete, and total value calculation features.
                     </details>
                 </div>
-                <!-- Project 2 Container -->
+                <!-- Project 2 -->
                 <div class="sub-project">
                     <h3>Project 2: Portfolio Website</h3>
                     <figure>
@@ -136,7 +136,7 @@
         <!-- Technical Skills Section -->
         <section id="technical-skills" class="skills-section">
             <h2>Technical Skills</h2>
-            <!-- Technical skills Container -->
+            <!-- Technical skills -->
             <div class="skills">
                 <ul>
                     <li>
@@ -179,9 +179,9 @@
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
             <h2>Contact</h2>
-            <!-- Contact Container -->
+            <!-- Contact -->
             <div class="contact">
-                <!-- Contact Information Container -->
+                <!-- Contact Information -->
                 <div class="contact-information">
                     <address>
                         <div>
@@ -209,7 +209,7 @@
                         </a>
                     </div>
                 </div>
-                <!-- Form Container -->
+                <!-- Form -->
                 <div class="form-container">
                     <form>
                         <label>
