--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Carlos Rojas - Portfolio</title>
+    <!-- Link to an external CSS file -->
     <link rel="stylesheet" href="styles.css" />
+    <!-- Google Fonts for styling -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="./img/favicon.png" type="image/x-icon">
 </head>
@@ -19,6 +21,7 @@
         <!-- Navigation -->
         <nav class="navbar">
             <ul>
+                <!-- Navigation links to different sections of the page -->
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#work-experience-education">Work Experience & Education</a></li>
                 <li><a href="#my-projects">My Projects</a></li>
@@ -55,7 +58,7 @@
                 <img src="./img/profile_photo.jpg" alt="Profile photo" width="250">
             </div>
         </section>
-        <!-- Work Experience / Education Section -->
+        <!-- Work Experience & Education Section -->
         <section id="work-experience-education" class="work-education-section">
             <!-- Work Experience -->
             <div class="work-experience">
@@ -184,15 +187,11 @@
                 <!-- Contact Information -->
                 <div class="contact-information">
                     <address>
-                        <div>
-                            <i class="fas fa-envelope"></i> Email: caarojasbo@unal.edu.co
-                        </div>
-                        <div>
-                            <i class="fas fa-phone"></i> Phone: +57 312 405 2318
-                        </div>
-                        <div>
-                            <i class="fas fa-location"></i> Location: Medellín, Colombia
-                        </div>
+                        <ul>
+                            <li><i class="fas fa-envelope"></i> Email: caarojasbo@unal.edu.co</li>
+                            <li><i class="fas fa-phone"></i> Phone: +57 312 405 2318</li>
+                            <li><i class="fas fa-location"></i> Location: Medellín, Colombia</li>
+                        </ul>
                     </address>
                     <div class="social-links">
                         <a href="https://github.com/Carturo8" target="_blank">
@@ -204,26 +203,19 @@
                         <a href="https://www.instagram.com/" target="_blank">
                             <i class="fab fa-instagram"></i> Instagram
                         </a>
-                        <a href="https://x.com/?lang=es" target="_blank">
-                            <i class="fab fa-x-twitter"></i> X
-                        </a>
                     </div>
                 </div>
                 <!-- Form -->
                 <div class="form-container">
-                    <form>
-                        <label>
-                            <input type="text" placeholder="Name" required>
-                        </label>
-                        <label>
-                            <input type="email" placeholder="Email" required>
-                        </label>
-                        <label>
-                            <input type="text" placeholder="Subject" required>
-                        </label>
-                        <label>
-                            <textarea rows="4" placeholder="Message" required></textarea>
-                        </label>
+                    <form action="#" method="POST">
+                        <label for="name"></label>
+                        <input id="name" type="text" placeholder="Name" required>
+                        <label for="email"></label>
+                        <input id="email" type="email" placeholder="Email" required>
+                        <label for="subject"></label>
+                        <input id="subject" type="text" placeholder="Subject" required>
+                        <label for="message"></label>
+                        <textarea id="message" rows="4" placeholder="Message" required></textarea>
                         <button type="submit">Send Message</button>
                     </form>
                 </div>
